add button classes

--- a/edit.html
+++ b/edit.html
@@ -66,7 +66,7 @@
             <input name="Todo[progress]" id="todo-progress" type="number" min="0" max="100" value="50">
           </div>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
 
