--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <td>
               <div class="btn-group" role="group" aria-label="...">
                 <a href="edit.html" class="btn btn-default">Edit</a>
-                <a href="# class="btn btn-danger">Delete</a>
+                <a href="#" class="btn btn-danger">Delete</a>
               </div>
             </td>
           </tr>
@@ -69,7 +69,7 @@
             <td>
               <div class="btn-group" role="group" aria-label="...">
                 <a href="edit.html" class="btn btn-default">Edit</a>
-                <a href="# class="btn btn-danger">Delete</a>
+                <a href="#" class="btn btn-danger">Delete</a>
               </div>
             </td>
           </tr>
@@ -80,7 +80,7 @@
             <td>
               <div class="btn-group" role="group" aria-label="...">
                 <a href="edit.html" class="btn btn-default">Edit</a>
-                <a href="# class="btn btn-danger">Delete</a>
+                <a href="#" class="btn btn-danger">Delete</a>
               </div>
             </td>
           </tr>
