--- a/new.html
+++ b/new.html
@@ -47,7 +47,7 @@
             <label for="todo-name">Name</label>
           </div>
           <div class="col-8 col-lg-8 col-md-8 col-sm-8 col-xs-12">
-            <input name="Todo[name]" id="todo-name" type="text">
+            <input name="Todo[name]" id="todo-name" type="text" class="form-control">
           </div>
         </div>
         <div class="row">
@@ -55,7 +55,7 @@
             <label for="todo-expiry-date">Expiry Date</label>
           </div>
           <div class="col-8 col-lg-8 col-md-8 col-sm-8 col-xs-12">
-            <input name="Todo[expiry-date]" id="todo-expiry-date" type="date" value="2016-05-31">
+            <input name="Todo[expiry-date]" id="todo-expiry-date" type="date" value="2016-05-31" class="form-control">
           </div>
         </div>
         <div class="row">
@@ -63,7 +63,7 @@
             <label for="todo-progress">Progress</label>
           </div>
           <div class="col-8 col-lg-8 col-md-8 col-sm-8 col-xs-12">
-            <input name="Todo[progress]" id="todo-progress" type="number" min="0" max="100" value="50">
+            <input name="Todo[progress]" id="todo-progress" type="number" min="0" max="100" value="50" class="form-control">
           </div>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
